# Finsightai

./: .gitignore  README.md  render.yaml
ai-service/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
ai-service/app/: __init__.py  config.py  main.py
ai-service/app/clients/: __init__.py  finnhub_client.py  llm_client.py
ai-service/app/kb/raw/cfpb/: credit.txt  debt.txt  emergency_savings.txt  saving.txt
ai-service/app/kb/raw/finsight_kb/: behavioral.md  budgeting.md  debt.md  emergency_fund.md  investing.md
ai-service/app/prompts/: chat_prompt.txt  qna_prompt.txt  strategy_prompt.txt  system_prompt.txt
ai-service/app/rag/: __init__.py  chunker.py  embedder.py  ingest.py  retriever.py  vector_store.py  web_retrieval.py
ai-service/app/routers/: __init__.py  chat.py  market.py  strategy.py
ai-service/app/schemas/: __init__.py  insight.py  market.py  profile.py  sources.py
ai-service/app/services/: __init__.py  citation_formatter.py  macro_context.py  response_parser.py  strategy_engine.py
backend/: .env.example  README.md  finhub_client.py  live_stocks.py  local_llm.py  main.py  marketstack_client.py  ollama_llm.py  parser.py  pdf_ingest.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/routers/: __init__.py  health.py  onboard.py  profile.py  upload.py
backend/app/services/: __init__.py  categorizer.py  parser.py  scorer.py  signals.py
backend/app/storage/: __init__.py  session_store.py
backend/app/utils/: currency.py  dates.py
docs/: demo_transactions_10outof10.csv  (+4 more)
(+78 files in other folders)
