[project]
name = "finsight-backend"
version = "0.1.0"
description = "FinSight AI - Data engine: onboarding, upload, signals, scorer. Person 2."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]
